# ubl-rs-tester

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: invoice.rs  line.rs  main.rs  party.rs
