[package]
name = "ubl-rs-tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
ubl-rs = { path = "../ubl-rs" }
# ubl-rs = { git = "https://github.com/hienohomma/ubl-rs.git" }
